--- a/ZKTecoDown/conf.ini
+++ b/ZKTecoDown/conf.ini
@@ -1,2 +1,2 @@
-;ç2·Ú¿ŸY@›Ä’dç˜Ë@9è¥d‰¿ŒøœÔİ}ªıßab™‰.C‘<Œ¥ğ‰“aQ\âKö¶`¤F³áğÆ‚Mj‰Ã
-Ó«ÈZİî–lyv$Îµâ Á—òãyšl¹ÛT/5ßriÑ0“/’á¨
+™ºòó?PpKò²É[&xŸ„[ÜâÏšİáb²Ã¡‹ˆê§ÔŠ"½¦«{|,@ùeßVª™È“âË*vÙıI¤ÒSä&°M”f›äÇƒíTˆ¢EZ_·šGK² ƒ½'|¬C¢+¶6Ê"ëÄïËwKl×z[¯yz‹=Bª#
+.ËÖ"şzŠ‚bAÌŠ{¦;xYğÏÃé¸
