--- a/ZKTecoDown/Properties/launchSettings.json
+++ b/ZKTecoDown/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ZKTecoDown": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\Luis Gullino\\source\\repos\\GullinoAgus\\ZKTecoDown\\ZKTecoDown"
+      "workingDirectory": "%HOMEPATH%\\source\\repos\\GullinoAgus\\ZKTecoDown\\ZKTecoDown"
     }
   }
 }
