Corrections and main methods development

--- a/ZKTecoDown/conf.ini
+++ b/ZKTecoDown/conf.ini
@@ -1,2 +1,2 @@
-™ºòó?PpKò²É[&xŸ„[ÜâÏšÝáb²Ã¡‹ˆê§ÔŠ"½¦«{|,@ùeßVª™È“âË*vÙýI¤ÒSä&°M”f›äÇƒíTˆ¢EZ_·šGK² ƒ½'|¬C¢+¶6Ê"ëÄïËwKl×z[¯yz‹=Bª#
-.ËÖ"þzŠ‚bAÌŠ{¦;xYðÏÃé¸
+‚tLÝKÁ¡7J&è_n¬
+VÅAß£ôãZõU·oiÑCI$ŸWåä™l›í‹jTJa”yÙÊæéU?óM³{À‡“Þ\%6Oœ‚†#RQ®ñzmó8mzË(‘î+m–Z—q²GÁŒƒÊ&á²¾;€T}]…äÜAêY>™´æàFø=7=)}É84O¸ÿ\óãÛ([]FÅ£byóTðÒ0Šy§¸V"€žèI)U°˜™…‹
