--- a/ZKTecoDown/App.config
+++ b/ZKTecoDown/App.config
@@ -5,7 +5,7 @@
 	</configSections>
 	<log4net>
 		<appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-			<file type="log4net.Util.PatternString" value="./logs/log-%utcdate{yyyy-MM-dd-HH-MM}.txt" />
+			<file type="log4net.Util.PatternString" value="%property{logsPath}logs/log-%date{yyyy-MM-dd-HH-mm}.txt" />
 			<appendToFile value="true" />
 			<rollingStyle value="Size" />
 			<maximumFileSize value="10MB" />
